alignment issues fixed on grid

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -73,6 +73,7 @@ div#main {
 }
 
 .cell-wrapper {
+    display: inline-block;
     position: relative;
     border: 1px solid black;
 }
